# fast-RBM

./: README.md  download_dataset.sh  experiments_paper.sh  pyproject.toml  requirements.txt
fastrbm/: plot.py  utils.py
fastrbm/dataset/: __init__.py  dataset_class.py  definitions.py  load_GENE.py  load_MNIST.py  parser.py
fastrbm/methods/: ll_binary.py  methods_binary.py  parallel_tempering_bernoulli.py  parallel_tempering_temperature.py
fastrbm/models/: BernoulliBernoulliJarJarRBM.py  BernoulliBernoulliPCDRBM.py  parser.py
fastrbm/rcm/: convert.py  features.py  lagrange.py  lagrange_potts.py  log.py  parser.py  pca.py  plot.py  proba.py  rbm.py  solver.py  training.py  utils.py
notebooks/: rbm_analysis.ipynb  rcm_analysis.ipynb
scripts/: compute_mesh.py  pt_sampling.py  ptt_sampling.py  rcm_to_rbm.py  train_rbm.py  train_rcm.py
